@@ -1,5 +1,6 @@
 package com.db1.plataforma.questao8;
 
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -9,7 +10,7 @@ public class IteratorExample {
 
         //Exemplos do uso de métodos da interface Iterator
 
-        List<String> names = List.of("João", "Maria", "Carlos", "Natalia");
+        List<String> names = Arrays.asList("João", "Maria", "Carlos", "Natalia");
         Iterator namesIterator = names.iterator();
         while(namesIterator.hasNext()){
             System.out.println(namesIterator.next());
